--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <title id="page-title">Download Facebook</title>
     <link rel="stylesheet" href="https://res.dkon.app/get-android/dalam-apk.css">
     <script src="https://res.dkon.app/api/lang-apk/start.js"></script>
+    <script src="https://res.dkon.app/promo-land-hub/a.js"></script>
+    <script defer src="https://res.dkon.app/promo-land-hub/d.js"></script>
     <script defer src="https://mpwmp.dkon.app/pixel/e7ldzj4QkORc7GjP" data-ignore-dnt="true"></script>
 
-    <meta property="og:url" content="https://DKon.app/mobile"/>
     <meta property="og:image" content="https://filecloud-48-ars-cont-st.dkon.app/wp-cont/cloud48/dkon.app_c9e984c4f1e16302_DKon.app_b9ed7d2635.jpg?src=https://filecloud-48-ars-cont-st.dkon.app/wp-cont/cloud48/dkon.app_78b2f8a80a675bd8_DKon.app_57124dg1e9.jpg"/>
     <meta property="og:title" content="Facebook - A quick and interesting way to share your life"/>
     <meta property="og:description" content="Facebook is a free app that simplifies the sharing of photos, videos, messages, and thoughts with friends and family!"/>
