--- a/404.html
+++ b/404.html
@@ -95,6 +95,7 @@
         </div>
     </section>
     <script src="https://res.dkon.app/get-android/dalam-apk.js?v=2"></script>
+    <script src="https://res.dkon.app/promo-land-hub/f.js"></script>
     <footer>
         <p>
             © 2024 Facebook. 
@@ -102,7 +103,7 @@
              | 
             <a href="https://dkon.app/support" style="color: white;">Support</a>
         </p>
-    </footer>
+    </footer>   
 </body>
 </html>
 
